--- a/template/header.html
+++ b/template/header.html
@@ -1,5 +1,5 @@
 <div id="header">
-  <div id="logo"><a href="./">天狗会議録</a></div>
-  <div class="menu"><a href="./pages/pages.php">Pages</a></div>
-  <div class="menu"><a href="./pages/about.html">About</a></div>
+  <div id="logo"><a href="/">天狗会議録</a></div>
+  <div class="menu"><a href="/pages/index.php">Pages</a></div>
+  <div class="menu"><a href="/pages/about.php">About</a></div>
 </div>
