--- a/template/head.html
+++ b/template/head.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
-<link rel="stylesheet" type="text/css" href="/css/atelier-dune-dark.css">
+<script src="/codeblock/codeblock.js"></script>
+<link rel="stylesheet" type="text/css" href="/codeblock/codeblock.css">
 <link rel="stylesheet" type="text/css" href="/css/homepage.css">
