chore: arrange css

--- a/codeblock/codeblock.css
+++ b/codeblock/codeblock.css
@@ -43,7 +43,7 @@ pre.codeblock>span.type {
 }
 
 pre.codeblock>span.function {
-    color: #fdf5e6;
+    color: #EAEAB0;
 }
 
 pre.codeblock>span.escape {
