--- a/template/head.html
+++ b/template/head.html
@@ -2,4 +2,4 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
 <script src="/codeblock/codeblock.js"></script>
 <link rel="stylesheet" type="text/css" href="/codeblock/codeblock.css">
-<link rel="stylesheet" type="text/css" href="/css/homepage.css">
+<link rel="stylesheet" type="text/css" href="/template/homepage.css">
