feat: add codeblock for make

--- a/codeblock/codeblock.css
+++ b/codeblock/codeblock.css
@@ -33,7 +33,7 @@ pre.codeblock>span.keyword {
 }
 
 pre.codeblock>span.id {
-    color: #96DCF0;
+    color: #baefff;
 }
 
 pre.codeblock>span.const {
