--- a/html/coms/quoteblock.css
+++ b/html/coms/quoteblock.css
@@ -13,3 +13,9 @@
   text-align: right;
   padding-right: 1rem;
 }
+
+@media screen and (max-width: 900px) {
+  .quoteblock {
+    margin-right: 0.5rem;
+  }
+}
