--- a/html/coms/cbody.css
+++ b/html/coms/cbody.css
@@ -62,7 +62,7 @@
 
 #cbody-content {
 	box-sizing: border-box;
-	padding: 1.5rem;
+	padding: 3rem;
 	width: 100%;
 }
 
@@ -141,8 +141,12 @@
 /* responsive */
 
 @media screen and (max-width: 800px) {
-	#cbody-content-wrapper {
-		min-width: 0;
-		width: 100%;
-	}
+  #cbody-content-wrapper {
+    min-width: 0;
+    width: 100%;
+  }
+
+  #cbody-content {
+    padding: 0.75rem;
+  }
 }
