--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -6,9 +6,13 @@
 </div>
 <style is:global>
     .content {
+        display: flex;
+        flex-flow: column;
+        flex-grow: 1;
 		box-sizing: border-box;
 		padding: clamp(0.75rem, -6rem + 18vw, 3rem);
 		width: 100%;
+        height: 100%;
 		word-wrap : break-word;
 		overflow-wrap : break-word;
 	}
@@ -33,9 +37,5 @@
     }
     .content h3 {
         margin-top: 2rem;
-    }
-    .content p {
-        line-height: 2rem;
-        margin: 2rem 0;
     }
 </style>
