--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Content from '../components/Content.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -15,14 +17,19 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
 		<div id="content-wrapper">
 			<Content>
 				<slot />
 			</Content>
 		</div>
+		<Footer />
 	</body>
 </html>
 
@@ -39,6 +46,8 @@ const { title } = Astro.props;
 		min-height: 100vh;
 	}
 	#content-wrapper {
+		display: flex;
+		flex-flow: column;
 		box-sizing: border-box;
 		background-color: white;
 		margin: 0 auto;
