--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -1,9 +1,13 @@
 ---
 import Layout from "./Layout.astro";
+import PostHeader from "../components/PostHeader.astro";
+import PostFooter from "../components/PostFooter.astro";
 
 const { frontmatter } = Astro.props;
 ---
 
 <Layout title={frontmatter.title}>
+	<PostHeader title={frontmatter.title} tags={frontmatter.tags} date={frontmatter.date} />
 	<slot />
+	<PostFooter />
 </Layout>
