feat: Shikiを利用可能に

--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -37,4 +37,8 @@
     .content h3 {
         margin-top: 2rem;
     }
+    .content .astro-code {
+        padding: 1.5rem;
+        border-radius: 5px;
+    }
 </style>
