--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,9 +5,10 @@ import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
+	topImage?: string;
 }
 
-const { title } = Astro.props;
+const { title, topImage } = Astro.props;
 ---
 
 <!doctype html>
@@ -25,6 +26,7 @@ const { title } = Astro.props;
 	<body>
 		<Header />
 		<div id="content-wrapper">
+			{topImage && <img src={topImage} width="100%" />}
 			<Content>
 				<slot />
 			</Content>
