--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,6 +53,7 @@ const { title, topImage } = Astro.props;
 		box-sizing: border-box;
 		background-color: white;
 		margin: 0 auto;
+		width: 800px;
 		max-width: 800px;
 		flex-grow: 1;
 	}
