--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,14 +2,14 @@
 ---
 
 <div class="footer">
-    2022-2024, Tengu712, Skydog Association
+	2022-2024, Tengu712, Skydog Association
 </div>
-<style is:global>
+<style>
 	.footer {
-        margin: 0 auto;
-        padding-top: 2.5rem;
-        padding-bottom: 1rem;
-        color: white;
-        text-align: center;
-    }
+		margin: 0 auto;
+		padding-top: 2.5rem;
+		padding-bottom: 1rem;
+		color: white;
+		text-align: center;
+	}
 </style>
