fix: コードブロックのフォントを修正

--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -37,18 +37,19 @@
 			margin-top: 2rem;
 		}
 		.astro-code {
-			min-width:0;
-			padding: 1.5rem;
 			border-radius: 5px;
-			font-family:
-				'Noto Sans Mono CJK JP',
-				'Source Han Code JP',
-				SFMono-Regular,
-				Consolas,
-				'Roboto Mono',
-				'Courier New',
-				Meiryo,
-				monospace;
+			padding: 1.5rem;
+			code {
+				font-family:
+					'Noto Sans Mono CJK JP',
+					'Source Han Code JP',
+					SFMono-Regular,
+					Consolas,
+					'Roboto Mono',
+					'Courier New',
+					Meiryo,
+					monospace;
+			}
 		}
 		/* REVIEW: コンポーネントに別けても良いかもしれない */
 		table {
