--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,19 +40,16 @@ const { title, topImage } = Astro.props;
 		-webkit-text-size-adjust: 100%;
 		font-family: 'Noto Sans JP', sans-serif;
 		background-color: rgb(35, 35, 35);
-		display: flex;
-		flex-flow: column;
 		font-size: 16px;
 		margin: 0;
-		min-height: 100vh;
-	}
-	#content-wrapper {
-		display: flex;
-		flex-flow: column;
-		box-sizing: border-box;
-		background-color: white;
-		margin: 0 auto;
-		max-width: 800px;
-		flex-grow: 1;
+		height: 100vh;
+		#content-wrapper {
+			display: flex;
+			flex-flow: column;
+			background-color: white;
+			margin: 0 auto;
+			max-width: 800px;
+			min-height: calc(100% - 8rem);
+		}
 	}
 </style>
