--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -55,6 +55,7 @@
 			overflow: scroll;
 		}
 		table {
+			margin: 0 auto;
 			border-collapse: collapse;
 			thead tr {
 				border-top: 1px solid black;
