--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -54,6 +54,23 @@
 		.sc {
 			overflow: scroll;
 		}
+		blockquote {
+			position: relative;
+			color: #303030;
+			background-color: #fff3f3;
+			border-left: solid 0.35rem #b07a7a;
+			padding: 1rem;
+			margin-left: 2rem;
+			/* 600px:0.5 800px:2.5 */
+			margin-right: clamp(0.5rem, -5.5rem + 16vw, 2.5rem);
+			cite {
+				display: block;
+				color: #808080;
+				font-size: 0.8rem;
+				text-align: right;
+				padding-right: 1rem;
+			}
+		}
 		table {
 			margin: 0 auto;
 			border-collapse: collapse;
