--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -25,6 +25,10 @@
 		b {
 			color: red;
 		}
+		h1 {
+			/* 600px:1.25 800px:2 */
+			font-size: clamp(1.25rem, -1rem + 6vw, 2rem);
+		}
 		h2 {
 			margin-top: 5rem;
 			padding: 0.25rem 0.8rem;
@@ -53,6 +57,9 @@
 		}
 		.sc {
 			overflow: scroll;
+		}
+		hr {
+			width: 100%;
 		}
 		blockquote {
 			position: relative;
