feat: 漫画創作論を追加

--- a/src/components/Image.astro
+++ b/src/components/Image.astro
@@ -8,8 +8,10 @@ const {src, caption} = Astro.props;
 
 <div class="image">
 	<img src={src}>
-	<br>
-	<label>{caption}</label>
+	{caption &&
+		<br>
+		<label>{caption}</label>
+	}
 </div>
 <style>
 	.image {
