fix: OGP画像の差替えを棄却

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ interface Props {
 
 const { title, topImage } = Astro.props;
 const canonicalURL = new URL(Astro.url.pathname, 'https://skdassoc.com/');
-const ogpImageURL = new URL('/ogp.png', canonicalURL);
+const ogpImageURL = new URL('/ogp-image.png', canonicalURL);
 ---
 
 <!doctype html>
