--- a/src/layouts/TipsLayout.astro
+++ b/src/layouts/TipsLayout.astro
@@ -1,7 +1,7 @@
 ---
 const { frontmatter } = Astro.props;
 const canonicalURL = new URL(Astro.url.pathname, 'https://skdassoc.com/');
-const ogpImageURL = new URL('/ogp.png', canonicalURL);
+const ogpImageURL = new URL('/ogp-image.png', canonicalURL);
 ---
 
 <!doctype html>
