--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -30,16 +30,20 @@
 			font-size: clamp(1.25rem, -1rem + 6vw, 2rem);
 		}
 		h2 {
-			margin-top: 5rem;
-			padding: 0.25rem 0.8rem;
+			margin-top: 3.5rem;
+      padding-bottom: 0.6rem;
 			background: transparent;
-			border-left: solid 0.5rem black;
+      border-bottom: 1px solid gray;
 			/* 600px:1.25 800px:1.5 */
 			font-size: clamp(1.25rem, 0.5rem + 2vw, 1.5rem);
 		}
 		h3 {
 			margin-top: 2rem;
 		}
+    p {
+      margin: 0.875rem 0;
+      line-height: 1.75rem;
+    }
 		.astro-code {
 			border-radius: 5px;
 			padding: 1.5rem;
