--- a/asset/style/header.css
+++ b/asset/style/header.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 40px;
+    height: 48px;
     border-bottom: 1px solid #ccc;
     display: flex;
     align-items: center;
@@ -18,4 +18,14 @@
 
 .header>*:last-child {
     margin-right: 16px;
+}
+
+.header img {
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    cursor: pointer;
+    display: block;
 }
