--- a/asset/style/md.css
+++ b/asset/style/md.css
@@ -7,6 +7,11 @@ html, body {
     font-size: 16px;
 }
 
+body {
+   display: flex;
+   flex-direction: column;
+}
+
 h2 {
     margin: 0;
     margin-top: 54px;
