--- a/asset/style/md.css
+++ b/asset/style/md.css
@@ -1,7 +1,7 @@
 html, body {
     -webkit-text-size-adjust: 100%;
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
     background-color: #f5f5f5;
     color: #08131a;
     font-size: 16px;
