--- a/asset/style/post.css
+++ b/asset/style/post.css
@@ -1,3 +1,7 @@
+.triad-center a {
+    text-decoration: underline;
+}
+
 .catch-icon {
     margin-top: 48px;
     text-align: center;
@@ -5,4 +9,21 @@
 
 .catch-icon>svg {
     width: 96px;
+}
+
+.img-container {
+    margin: 0 auto;
+    width: 80%;
+    max-width: 80%;
+    text-align: center;
+}
+
+.img-container label {
+    font-size: 14px;
+}
+
+img {
+    margin: 0 auto;
+    max-width: 100%;
+    display: block;
 }
