--- a/asset/style/posts-index.css
+++ b/asset/style/posts-index.css
@@ -1,6 +1,7 @@
 .catch {
     margin-top: 48px;
     width: 100%;
+    user-select: none;
 }
 
 .card {
@@ -10,4 +11,8 @@
 .card>a:first-child {
     font-size: 28px;
     font-weight: 700;
+}
+
+.filter-display {
+    text-align: center;
 }
