--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -78,6 +78,38 @@ pre {
     -moz-tab-size: 4;
 }
 
+table {
+    margin: 16px auto;
+    border-collapse: collapse;
+    overflow-wrap: break-word;
+    font-size: 14px;
+}
+
+thead {
+    border-top: 1px solid #08131a;
+    border-bottom: 1px solid #08131a;
+}
+
+tbody {
+    border-bottom: 1px solid #08131a;
+}
+
+th, td {
+    padding: 0 8px;
+    border-left: 1px solid #08131a;
+    border-right: 1px solid #08131a;
+}
+
+th:first-child,
+td:first-child {
+    border-left: none;
+}
+
+th:last-child,
+td:last-child {
+    border-right: none;
+}
+
 .header {
     width: 100%;
     height: 48px;
