--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -200,3 +200,20 @@ td:last-child {
         display: none;
     }
 }
+
+.img-container {
+    margin: 0 auto;
+    width: 80%;
+    max-width: 80%;
+    text-align: center;
+}
+
+.img-container label {
+    font-size: 14px;
+}
+
+.img-container img {
+    margin: 0 auto;
+    max-width: 100%;
+    display: block;
+}
