--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -78,38 +78,6 @@ pre {
     -moz-tab-size: 4;
 }
 
-table {
-    margin: 16px auto;
-    border-collapse: collapse;
-    overflow-wrap: break-word;
-    font-size: 14px;
-}
-
-thead {
-    border-top: 1px solid #08131a;
-    border-bottom: 1px solid #08131a;
-}
-
-tbody {
-    border-bottom: 1px solid #08131a;
-}
-
-th, td {
-    padding: 0 8px;
-    border-left: 1px solid #08131a;
-    border-right: 1px solid #08131a;
-}
-
-th:first-child,
-td:first-child {
-    border-left: none;
-}
-
-th:last-child,
-td:last-child {
-    border-right: none;
-}
-
 .header {
     width: 100%;
     height: 48px;
@@ -216,4 +184,42 @@ td:last-child {
     margin: 0 auto;
     max-width: 100%;
     display: block;
+}
+
+.table-container {
+    width: 100%;
+    overflow-x: auto;
+}
+
+.table-container table {
+    margin: 16px auto;
+    border-collapse: collapse;
+    white-space: nowrap;
+    font-size: 14px;
+}
+
+.table-container thead {
+    border-top: 1px solid #08131a;
+    border-bottom: 1px solid #08131a;
+}
+
+.table-container tbody {
+    border-bottom: 1px solid #08131a;
+}
+
+.table-container th, td {
+    padding: 0 8px;
+    border-left: 1px solid #08131a;
+    border-right: 1px solid #08131a;
+    white-space: nowrap;
+}
+
+.table-container th:first-child,
+.table-container td:first-child {
+    border-left: none;
+}
+
+.table-container th:last-child,
+.table-container td:last-child {
+    border-right: none;
 }
