--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -163,6 +163,10 @@ pre {
     color: #777 !important;
 }
 
+.index a:hover {
+    color: red !important;
+}
+
 @media (max-width: 1100px) {
     .index {
         display: none;
@@ -184,6 +188,20 @@ pre {
     margin: 0 auto;
     max-width: 100%;
     display: block;
+}
+
+.double-imgs-container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    text-align: center;
+}
+
+.double-imgs-container img {
+    width: 50%;
+    max-width: 50%;
+    padding: 0.5%;
 }
 
 .table-container {
