--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -81,6 +81,7 @@ pre {
 .header {
     width: 100%;
     height: 48px;
+    margin-bottom: 32px;
     border-bottom: 1px solid #ccc;
     display: flex;
     align-items: center;
@@ -145,11 +146,11 @@ pre {
 
 .index {
     max-width: 100%;
-    padding-top: 48px;
+    padding-top: 16px;
     padding-left: 60px;
     padding-right: 16px;
     position: sticky;
-    top: 0;
+    top: 32px;
     display: block;
     box-sizing: border-box;
 }
