--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -21,8 +21,14 @@ h1 {
 h2 {
     margin: 0;
     margin-top: 54px;
-    margin-bottom: -18px;
     font-size: 28px;
+    font-weight: 700;
+}
+
+h3 {
+    margin: 0;
+    margin-top: 36px;
+    font-size: 18.5px;
     font-weight: 700;
 }
 
