--- a/asset/style/basic.css
+++ b/asset/style/basic.css
@@ -2,7 +2,7 @@ html, body {
     -webkit-text-size-adjust: 100%;
     margin: 0;
     min-height: 100vh;
-    background-color: #f5f5f5;
+    background-color: white;
     color: #08131a;
     font-size: 16px;
 }
